New feature#2:add skills page

--- a/skill.html
+++ b/skill.html
@@ -16,10 +16,10 @@
       <a class="nav-link " href="#">Personal Info</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="#">Education</a>
+      <a class="nav-link " href="#">Education</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Skills</a>
+      <a class="nav-link active" href="#">Skills</a>
     </li>
   </ul>
   
@@ -34,16 +34,27 @@
     <tbody>
       <tr>
 		<td rowspan="7"><img src="images/alan.png" class="rounded mx-auto d-block" alt="Alan McDonald" width="200" height="356"></td>
-        <th>University:</th>
-        <td>The University of the Thai Chamber of Commerce</td>
+        <th>Sport:</th>
+        <td>basketball<br>
+            Volleyball<br>
+            Football
+        </td>
       </tr>
       <tr>
-        <th>high school:</th>
-        <td>fatima school</td>
+        <th>Program:</th>
+        <td>Adobe Photoshop <br>
+            Adobe After Effects <br>
+            Adobe Lightroom <br>
+            Adobe Illustrator <br>
+            Adobe Premiere Pro 
+        </td>
       </tr>
 	  <tr>
-        <th>middle school:</th>
-        <td>fatima school
+        <th>Music:</th>
+        <td>drum set <br>
+            Keyboard <br>
+            Piano <br>
+            Bass 
         </td>
       </tr>
     </tbody>
